Improved on white space issues

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,7 +22,6 @@ footer{
 
 .imageFrame{
   width: 100%;
-  height: 50vh;
   max-height: 500px;
   display: flex;
   overflow: hidden;
@@ -65,4 +64,8 @@ section {
 #welcomeContainerRight{
   width: 35%;
   max-width:35%;
+}
+
+#welcomeFrame{
+  height: 50vh;
 }
